--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
           <li>Accueil</li>
           <li>Nos service</li>
-          <li>A propo</li>
+          <li>A propos</li>
           <li>Nous contacter</li>
         </ul>
       </nav>
